# WCCommon

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: FindHdf5.cmake  FindTorch.cmake  ProjectNameConfig.cmake  WCCommonConfig.cmake
include/: AppendOnlyVec.h  Config.h  CsvIO.h  DefEnum.h  DefTuple.h  Delegate.h  FifoFile.h  H5IO.h  HJLogFormat.h  LogConfig.h  NaNDefs.h  NumericTime.h  ProgressBar.h  ProjectName.h  UTF8Convertor.h  WCCommon.h  WCCommonUtils.h  WCCommonVersion.h  WCConfig.h  YAMLGetField.h  def_enum.h
scripts/: render.sh
src/: CMakeLists.txt  LogConfig.cpp  ProjectName.cpp  WCCommon.cpp
tests/: AppendOnlyVecTest.cpp  CMakeLists.txt  CsvIOTest.cpp  DefEnumTest.cpp  DefTupleTest.cpp  FifoFileTest.cpp  H5IOTest.cpp  HJLogFormatTest.cpp  LogConfig.yaml  LogConfigTest.cpp  NumericTimeTest.cpp  ProgressBarTest.cpp  ProjectNameTest.cpp  WCCommonTest.cpp  WCCommonUtilsTest.cpp  YAMLGetFieldTest.cpp  YAMLGetFieldTest.yaml
